[fix] 성능 테스트 실행 후, api 성능 개선 1.최신 포트폴리오 조회 로직 및 DB 쿼리 수정 ( for 성능 개선 ) 2. 댓글 조회 api 쿼리 수정 (  for 성능 개선 ) 3.유저가 Follow 시 redis에도 저장되게 수정 4. k6 테스트 위한 influxdb와 모니터링 위해 grafana, prometheus docker-compose.yml 파일에 추가